Fix rendering of double outlines

Outlines should always be rectangular, and the outline paint code forces
the outer/inner radii to zero.

But the shared paint code in BoxBorderPainter::DrawDoubleBorder does not
enforce zero-radii when computing the intermediate double edges.

Update DrawDoubleBorder() to avoid rounded intermediate edges when the
exterior edges are not rounded.

Bug: 861816
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I81cfccfbb3f14568a0aeacb065fc447f583f28c8
Reviewed-on: https://chromium-review.googlesource.com/1129334
Reviewed-by: Stephen Chenney <schenney@chromium.org>
Commit-Queue: Florin Malita <fmalita@chromium.org>
Cr-Commit-Position: refs/heads/master@{#573529}
Former-commit-id: f9dbd272ab74d0c5b0975830d0e1d3bdc8e94ad0